Fixed blocks bottom spacing

--- a/src/blocks.less
+++ b/src/blocks.less
@@ -19,7 +19,7 @@
 	> * {
 		width: calc(percentage(1 / @num) ~" - " @spacing);
 		margin-left: @spacing;
-		margin-bottom: @line-margin;
+		margin-bottom: @spacing;
 	}
 }
 
